Fixed a bug caused by a field mistakenly marked as repeatble, and a recent change in core external module code

--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
 			"name": "Form",
 			"required": true,
 			"type": "form-list",
-			"repeatable": true
+			"repeatable": false
 		},
 		{
 			"key": "longitude",
